# ExcelStructureValidator

./: 404.html  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt
app/: config.py  pipeline.py
app/validacoes/: __init__.py  colunas_estao_presentes.py  colunas_estao_presentes_na_mesma_ordem.py  existem_colunas_a_mais.py  existem_colunas_a_menos.py  quantidade_de_linhas.py  tipos_dados.py
data/input/: arquivo_recebido_1.xlsx  arquivo_recebido_2.xlsx  arquivo_recebido_3.xlsx  arquivo_recebido_4.xlsx  arquivo_recebido_5.xlsx
data/modelo/: arquivo_modelo.xlsx
docs/: index.md
pagina_2/: index.html
search/: search_index.json
tests/: test_model.py
